gpx upload OK (in challenge creation) + homepage without carousel + links to adventure/clans + category links in the top of the page

--- a/templates/challenge/_form.html.twig
+++ b/templates/challenge/_form.html.twig
@@ -121,6 +121,11 @@
                     </div>
                 {% endif %}
                 <div class="form-group">
+                    {{ form_errors(form.gpxTrackFile) }}
+                    {{ form_widget(form.gpxTrackFile) }}
+                    {{ form_help(form.gpxTrackFile) }}
+                </div>
+                <div class="form-group">
                     {{ form_errors(form.isPublic) }}
                     {{ form_widget(form.isPublic) }}
                     {{ form_help(form.isPublic) }}
