--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -22,41 +22,46 @@
             {% endif %}
         </div>
     </div>
-    <div class="main-carousel-home-page">
-        {{ include('component/_home_main_carousel.html.twig') }}
-    </div>
-    <section class="home-banner" style="background: url('{{ asset('build/images/background/bgimg1.jpeg') }}') no-repeat center; background-size: cover;">
-        <h2 class="hide-before-scroll show-on-scroll text-korange transparent-background-round-darker p-4">
-            En recherche d’activités de plein air, faites pour vous, vos amis ou vos clans ?<br>
-            KYOSC est la plateforme pour organiser et partager des moments forts dans une ambiance conviviale.<br>
-            Alors n’attendez plus et lancez-vous dans votre propre aventure !
-        </h2>
+{# Uncomment the 3 next lines to restore the old carousel on the homePage #}
+{#    <div class="main-carousel-home-page">#}
+{#        {{ include('component/_home_main_carousel.html.twig') }}#}
+{#    </div>#}
+    <section class="row mx-0 mb-2">
+        {% for category in imagesCarousel %}
+            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column justify-content-center align-items-center p-1 hide-before-scroll show-on-scroll"
+                href="{{ path('challenge_by_category', {name: category.name|lower}) }}"
+                style="background: url('{{ ('uploads/carousel/'~category.carousel)}}') no-repeat center; background-size: cover;"
+            >
+                <div class="d-flex flex-column justify-content-center align-items-center transparent-background-dark p-4" style="color: {{ category.color }};">
+                    <img src="/uploads/logo/{{ category.logo }}" class="home-carousel-logo">
+                    <h2>{{ category.name|capitalize }}</h2>
+                </div>
+            </a>
+        {% endfor %}
     </section>
+    <h2 class="hide-before-scroll show-on-scroll text-kred p-4">
+        KYOSC est la plateforme pour organiser et partager des moments forts dans une ambiance conviviale.<br>
+    </h2>
     <section class="home-choice-container">
-        <div class="home-choice hide-before-scroll show-on-scroll d-flex align-baseline">
+        <a class="home-choice hide-before-scroll show-on-scroll d-flex align-baseline" href="#challenge-section">
             <img src="{{ asset('build/images/picto/komplice.png') }}" class="home-choice-picto mb-3">
-            <h2 class="text-kblue">Retrouvez facilement les informations <br> essentielles des aventures <br> créées avec vos clans</h2>
+            <h2 class="text-kblue">Découvrez les aventures !</h2>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
-        </div>
-        <div class="home-choice hide-before-scroll show-on-scroll">
+        </a>
+        <a class="home-choice hide-before-scroll show-on-scroll" href="#clan-section">
             <img src="{{ asset('build/images/picto/kequipe.png') }}" class="home-choice-picto mb-3">
-            <h2 class="text-kgreen">Echangez et partagez avec vos clans <br> autour de vos aventures</h2>
+            <h2 class="text-kgreen">Découvrez les clans !</h2>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
-        </div>
-        <div class="home-choice hide-before-scroll show-on-scroll">
-            <img src="{{ asset('build/images/picto/kblason.png') }}" class="home-choice-picto mb-3">
-            <h2 class="text-kred">Venez gagnez<br> des récompenses</h2>
-            <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
-        </div>
+        </a>
     </section>
-    <div class="bg-dark d-flex justify-content-center hide-before-scroll show-on-scroll">
+    <!-- section challenges -->
+    <div id="challenge-section" class="bg-dark d-flex justify-content-center">
         <div class="w-75 text-center text-light p-3">
             <h2>Les aventures</h2>
             <p class="h5">Rejoignez ou créez des aventures sportives, en solo ou avec vos clans !</p>
         </div>
     </div>
-    <!-- section challenges -->
-    <section class="row mx-0">
+    <section class="row mx-0 mb-5">
         {% for challenge in featuredChallenges %}
             <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column
                 {% if challenge.id and challenge.id matches '/^([^0-9]*)$/' %}
@@ -109,13 +114,13 @@
             </a>
         {% endfor %}
     </section>
-    <div class="bg-dark d-flex justify-content-center hide-before-scroll show-on-scroll">
+    <!-- section clans -->
+    <div id="clan-section" class="bg-dark d-flex justify-content-center mt-5">
         <div class="w-75 text-center text-light p-3">
             <h2>Les clans</h2>
             <p class="h5">Rejoignez ou créez des clans, partagez et échangez autour de vos aventures !</p>
         </div>
     </div>
-    <!-- section clans -->
     <section class="row mx-0">
         {% for clan in clans %}
             <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column
