--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -57,7 +57,7 @@
         <div class="row justify-content-center justify-content-md-around">
             <div class="col-lg-6 transparent-background-dark p-3">
                 <h3 class="challenge-quotation mb-4 pre-line">{{ challenge.quotation }}</h3>
-                <p class="challenge-description pre-line">{{ challenge.description }}</p>
+                <p class="challenge-description pre-line">{{ challenge.description|auto_link|raw }}</p>
             </div>
         </div>
     </section>
@@ -135,7 +135,7 @@
     <div class="mt-2 mb-4 container d-flex justify-content-center">
         <div class="col-10 title-info-event transparent-background-dark p-3">
             <h3>Informations complémentaires sur cette aventure:</h3>
-            <p class="pre-line">{{ challenge.information }}</p>
+            <p class="pre-line">{{ challenge.information|auto_link|raw }}</p>
         </div>
     </div>
     {% endif %}
@@ -250,7 +250,7 @@
                     {% if message.isPublic %}
                         <div class="{% if app.user == message.author %}align-self-end text-right{% endif %} position-relative">
                             <div class="m-3 bubble {% if app.user == message.author %}bubble-bottom-right{% else %}bubble-bottom-left{% endif %}">
-                                <p class="pre-line">{{ message.content }}</p>
+                                <p class="pre-line">{{ message.content|auto_link }}</p>
                                 {% if app.user and is_granted("ROLE_ADMIN") or app.user == message.author or app.user == challenge.creator %}
                                     {{ include('message/_delete_form.html.twig') }}
                                 {% endif %}
@@ -272,6 +272,7 @@
         </div>
         {% if app.user %}
             <h3 class="mt-3">Ajoutez un commentaire !</h3>
+            <h4>Les commentaires ne sont visibles que par les participants à cette aventure</h4>
             {{ form_start(form, {'attr': {'id': 'commentForm'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
