--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -153,8 +153,9 @@
             {% endfor %}
         </div>
     </div>
+    {% if app.user and app.user == clan.creator or app.user in clan.members or is_granted("ROLE_ADMIN") %}
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
-        <h2>Commentaires</h2>
+        <h2>Messagerie privée du clan</h2>
         <div class="d-flex flex-column-reverse w-100 scroll-comment comment-space">
             {% if clan.messages|length >= 1 %}
                 {% for message in clan.messages|reverse %}
@@ -184,12 +185,14 @@
         {% endif %}
         </div>
         {% if app.user %}
-            <h3 class="mt-3">Ajoutez un commentaire !</h3>
+            <h3 class="mt-3">Ajoutez un message !</h3>
+            <h4>Les messages ne sont visibles que par les membres de ce clan</h4>
             {{ form_start(form, {'attr': {'id': 'commentForm'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         {% endif %}
     </div>
+    {% endif %}
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Aventures du clan</h2>
         <div class="container form-kyosc mb-4">
