getStarted typo + bigger <p>

--- a/templates/about/getStarted.html.twig
+++ b/templates/about/getStarted.html.twig
@@ -13,31 +13,31 @@
             <div class="my-3 p-4 text-center bg-white border-20px d-flex flex-column justify-content-between align-items-center get-started-card hide-before-scroll show-on-scroll">
                 <img src="{{ asset('build/images/goutte/kdefaut.png') }}" class="w-25">
                 <h3 class="h4">Renseigne ton profil et tes préférences sportives, de marques et de destinations</h3>
-                <p>Consulte régulièrement ton activité</p>
+                <p class="h5">Consulte régulièrement ton activité</p>
                 <a class="bg-kred btn text-uppercase text-white mb-3" href="{{ path("profil_my_profil") }}">Mon Espace</a>
             </div>
             <div class="my-3 p-4 text-center bg-white border-20px d-flex flex-column justify-content-between align-items-center get-started-card hide-before-scroll show-on-scroll">
                 <img src="{{ asset('build/images/goutte/kdefaut.png') }}" class="w-25">
                 <h3 class="h4">Crée ton aventure sportive et partage-la</h3>
-                <p>Ton aventure c'est la sortie, l'activité ou le challenge qui fait sens pour toi et tes amis</p>
+                <p class="h5">Ton aventure c'est la sortie, l'activité ou le challenge qui fait sens pour tes amis et toi</p>
                 <a href="{{ path('challenge_new') }}" class="bg-kred btn text-uppercase text-white mx-2 mb-3">Créer une aventure</a>
             </div>
             <div class="my-3 p-4 text-center bg-white border-20px d-flex flex-column justify-content-between align-items-center get-started-card hide-before-scroll show-on-scroll">
                 <img src="{{ asset('build/images/goutte/kdefaut.png') }}" class="w-25">
                 <h3 class="h4">Participe à d'autres aventures</h3>
-                <p>Sur invitation ou sur demande de participation</p>
+                <p class="h5">Sur invitation ou sur demande de participation</p>
                 <a href="{{ path('challenge_index') }}" class="bg-kred btn text-uppercase text-white mx-2 mb-3">Toutes les aventures</a>
             </div>
             <div class="my-3 p-4 text-center bg-white border-20px d-flex flex-column justify-content-between align-items-center get-started-card hide-before-scroll show-on-scroll">
                 <img src="{{ asset('build/images/goutte/kdefaut.png') }}" class="w-25">
                 <h3 class="h4">Crée ton clan et invite les membres</h3>
-                <p>Ton clan, c'est la tribu, le groupe, le cercle avec qui tu aimes réaliser des aventures humaines</p>
+                <p class="h5">Ton clan, c'est la tribu, le groupe, le cercle avec qui tu aimes réaliser des aventures humaines</p>
                 <a href="{{ path('clan_new') }}" class="bg-kred btn text-uppercase text-white mx-2 mb-3">Créer un clan</a>
             </div>
             <div class="my-3 p-4 text-center bg-white border-20px d-flex flex-column justify-content-between align-items-center get-started-card hide-before-scroll show-on-scroll">
                 <img src="{{ asset('build/images/goutte/kdefaut.png') }}" class="w-25">
                 <h3 class="h4">Participe à d'autres clans</h3>
-                <p>Sur invitation ou sur demande de participation</p>
+                <p class="h5">Sur invitation ou sur demande de participation</p>
                 <a href="{{ path('clan_index') }}" class="bg-kred btn text-uppercase text-white mx-2 mb-3">Tous les clans</a>
             </div>
         </div>
