comment -> message in clan show and challenge show

--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -267,7 +267,7 @@
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <p>Cette aventure n'a pas encore de commentaire</p>
+                <p>Cette aventure n'a pas encore de message</p>
             {% endif %}
         </div>
         {% if app.user %}
