--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -164,7 +164,7 @@
                     {% endif %}
                 {% endfor %}
         {% else %}
-            <p>Ce clan n'a pas encore de commentaire</p>
+            <p>Ce clan n'a pas encore de message</p>
         {% endif %}
         </div>
         {% if app.user %}
