labels displayed and more visible in challenge form + image preview

--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -15,7 +15,7 @@
     }
 
     label {
-        color: $light;
+        color: $black;
     }
 
     a:hover {
@@ -26,7 +26,7 @@
     p {
         font-family: $font-text;
         font-weight: $weight-text;
-        color: theme-color-level('kblue-typo');
+        color: $black;
     }
 
     small {
