--- a/templates/challenge/edit.html.twig
+++ b/templates/challenge/edit.html.twig
@@ -48,4 +48,13 @@
         })
     </script>
     {{ encore_entry_script_tags('checkbox') }}
+    <script>
+        const output = document.getElementById('output');
+        function loadFile() {
+            output.src = URL.createObjectURL(event.target.files[0]);
+            output.onload = function () {
+                URL.revokeObjectURL(output.src);
+            };
+        }
+    </script>
 {% endblock %}
