--- a/templates/clan/edit.html.twig
+++ b/templates/clan/edit.html.twig
@@ -14,3 +14,15 @@
 
     {{ include('clan/_delete_form.html.twig') }}
 {% endblock %}
+
+{% block javascripts %}
+    <script>
+        const output = document.getElementById('output');
+        function loadFile() {
+            output.src = URL.createObjectURL(event.target.files[0]);
+            output.onload = function () {
+                URL.revokeObjectURL(output.src);
+            };
+        }
+    </script>
+{% endblock %}
