--- a/templates/clan/new.html.twig
+++ b/templates/clan/new.html.twig
@@ -12,3 +12,15 @@
     </header>
     {{ include('clan/_form.html.twig') }}
 {% endblock %}
+
+{% block javascripts %}
+    <script>
+        const output = document.getElementById('output');
+        function loadFile() {
+            output.src = URL.createObjectURL(event.target.files[0]);
+            output.onload = function () {
+                URL.revokeObjectURL(output.src);
+            };
+        }
+    </script>
+{% endblock %}
